# SIPPY

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: bumpversion.yml  ci.yml  docs.yml  pypi.yml
Examples/: Ex_CST.py  test_armax.ipynb  utils.py
benchmarks/: benchmark_tf2ss.py
docs/Examples/: ARMAX.py  ARMAX_MIMO.py  ARX_MIMO.py  CST.py  OPT_GEN-INOUT.py  RECURSIVE.py  SS.py  armax-ic.ipynb  armax-mimo.ipynb  armax-siso.ipynb  armax.ipynb  arx-mimo.ipynb  cst-mimo.ipynb  opt.ipynb  rls.ipynb  state-space.ipynb  test_examples.py  utils.py
docs/examples/: armax-ic.ipynb  armax-mimo.ipynb  armax-siso.ipynb  arx-mimo.ipynb  cst-mimo.ipynb  input-output.ipynb  opt.ipynb  rls.ipynb  sklearn-api.ipynb  state-space.ipynb
docs/recipes/: input-output_linear_methods.ipynb  input-output_nonlinear_methods.ipynb  state-space_methods.ipynb
docs/scripts/: gen_ref_pages.py
docs/tutorials/: information-criterion.md  input-output_linear_methods.md  input-output_nonlinear_methods.ipynb  input-output_nonlinear_methods.md  state-space_methods.md
examples/: armax-ic.ipynb  armax-mimo.ipynb  armax-siso.ipynb  arx-mimo.ipynb  cst-mimo.ipynb  opt.ipynb  rls.ipynb  state-space.ipynb  test_examples.py  utils.py
examples/armax-ic/: index.html
examples/armax-mimo/: index.html
examples/armax-siso/: index.html
examples/arx-mimo/: index.html
examples/cst-mimo/: index.html
examples/opt/: index.html
examples/rls/: index.html
examples/state-space/: index.html
reference/SUMMARY/: index.html
reference/sippy_unipi/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
sippy_unipi/: OLSims_methods.py  Parsim_methods.py  __init__.py  _typing.py  armax.py  arx.py  evaluate.py  functionset.py  functionsetSIM.py  functionset_OPT.py  identification.py  io_opt.py  io_rls.py  model.py  model_selection.py  plot.py  preprocessing.py  timeresp.py  typing.py  utils.py
sippy_unipi/datasets/: __init__.py  _base.py  _input_generator.py  _systems_generator.py
sippy_unipi/io/: __init__.py  armax.py  arx.py  autoregressive.py  base.py  ills.py  lls.py  opt.py  rlls.py  rls.py
sippy_unipi/ss/: __init__.py  base.py  olsim.py  parsim.py  parsim_legacy.py
tutorials/: information-criterion.ipynb  input-output_linear_methods.ipynb  state-space_methods.ipynb
(+37 files in other folders)
